--- a/appview/pages/templates/repo/tags.html
+++ b/appview/pages/templates/repo/tags.html
@@ -4,6 +4,7 @@
 
 {{ define "repoContent" }}
   <section>
+    <h2 class="mb-4 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">tags</h2>
     <div class="flex flex-col py-2 gap-12 md:gap-0">
       {{ range .Tags }}
       <div class="md:grid md:grid-cols-12 md:items-start flex flex-col">
