appview: pages: show tags against commits

--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -151,8 +151,8 @@
 <div id="commit-log" class="md:col-span-1 px-2 pb-4">
   <div class="flex justify-between items-center">
     <a href="/{{ .RepoInfo.FullName }}/commits/{{ .Ref | urlquery }}" class="flex text-black dark:text-white items-center gap-4 pb-2 no-underline hover:no-underline group">
-      <div class="flex gap-2 items-center">
-        {{ i "git-commit-horizontal" "w-4 h-4" }} commits
+      <div class="flex gap-2 items-center font-bold">
+        {{ i "logs" "w-4 h-4" }} commits
       </div>
       <span class="hidden group-hover:flex gap-2 items-center text-sm text-gray-500 dark:text-gray-400 ">
         view {{ .TotalCommits }} commits {{ i "chevron-right" "w-4 h-4" }}
@@ -248,9 +248,8 @@
   {{ if gt (len .BranchesTrunc) 0 }}
     <div id="branches" class="md:col-span-1 px-2 py-4 border-t border-gray-200 dark:border-gray-700">
       <a href="/{{ .RepoInfo.FullName }}/branches" class="flex text-black dark:text-white items-center gap-4 pb-2 no-underline hover:no-underline group">
-        <div class="flex gap-2 items-center">
-          <!-- git-branch icon is seemingly bigger than others at 4x4 -->
-          {{ i "git-branch" "w-3 h-3" }} branches
+        <div class="flex gap-2 items-center font-bold">
+          {{ i "git-branch" "w-4 h-4" }} branches
         </div>
         <span class="hidden group-hover:flex gap-2 items-center text-sm text-gray-500 dark:text-gray-400 ">
           view {{ len .Branches }} branches {{ i "chevron-right" "w-4 h-4" }}
@@ -283,7 +282,7 @@
     <div id="tags" class="md:col-span-1 px-2 py-4 border-t border-gray-200 dark:border-gray-700">
       <div class="flex justify-between items-center">
         <a href="/{{ .RepoInfo.FullName }}/tags" class="flex text-black dark:text-white items-center gap-4 pb-2 no-underline hover:no-underline group">
-          <div class="flex gap-2 items-center">
+          <div class="flex gap-2 items-center font-bold">
             {{ i "tags" "w-4 h-4" }} tags
           </div>
           <span class="hidden group-hover:flex gap-2 items-center text-sm text-gray-500 dark:text-gray-400 ">
