appview: profile: improve profile-card layout on mobile

--- a/appview/pages/templates/repo/tags.html
+++ b/appview/pages/templates/repo/tags.html
@@ -66,6 +66,10 @@
         {{ end }}
       </div>
     </div>
+    {{ else }}
+      <p class="text-center text-gray-400 dark:text-gray-500 p-4">
+        This repository does not contain any tags.
+      </p>
     {{ end }}
   </div>
 </section>
