appview: repo/log: fix alignment of ellipses and tag pills

--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -80,7 +80,7 @@
                         <div>
                             <div class="flex items-center justify-between">
                                 <div class="flex-1">
-                                    <div class="flex items-center">
+                                    <div class="inline">
                                         <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" 
                                            class="inline no-underline hover:underline dark:text-white">
                                            {{ index $messageParts 0 }}
