appview: ingester: process sh.tangled.repo.artifact records

--- a/appview/pages/templates/repo/fragments/artifact.html
+++ b/appview/pages/templates/repo/fragments/artifact.html
@@ -6,17 +6,17 @@
         <a href="/{{ .RepoInfo.FullName }}/tags/{{ .Artifact.Tag.String }}/download/{{ .Artifact.Name | urlquery }}" class="no-underline hover:no-underline">
           {{ .Artifact.Name }}
         </a>
-        <span class="text-gray-500 dark:text-gray-400 pl-2">{{ byteFmt .Artifact.Size }}</span>
+        <span class="text-gray-500 dark:text-gray-400 pl-2 text-sm">{{ byteFmt .Artifact.Size }}</span>
       </div>
 
-    <div id="right-side" class="text-gray-500 dark:text-gray-400 flex items-center flex-shrink-0 gap-2">
+    <div id="right-side" class="text-gray-500 dark:text-gray-400 flex items-center flex-shrink-0 gap-2 text-sm">
       <span title="{{ longTimeFmt .Artifact.CreatedAt }}" class="hidden md:inline">{{ timeFmt .Artifact.CreatedAt }}</span>
       <span title="{{ longTimeFmt .Artifact.CreatedAt }}" class="       md:hidden">{{ shortTimeFmt .Artifact.CreatedAt }}</span>
 
       <span class="select-none after:content-['·'] hidden md:inline"></span>
-      <span class="truncate max-w-[100px] hidden md:inline">{{ .Artifact.Mimetype }}</span>
+      <span class="truncate max-w-[100px] hidden md:inline">{{ .Artifact.MimeType }}</span>
 
-      {{ if and (.LoggedInUser) (eq .LoggedInUser.Did .Artifact.Did) }}
+      {{ if and .LoggedInUser (eq .LoggedInUser.Did .Artifact.Did) }}
         <button
           id="delete-{{ $unique }}"
           class="btn text-red-500 hover:text-red-700 dark:text-red-400 dark:hover:text-red-300 gap-2"
