--- a/appview/pages/templates/repo/fragments/cloneInstructions.html
+++ b/appview/pages/templates/repo/fragments/cloneInstructions.html
@@ -1,4 +1,8 @@
 {{ define "repo/fragments/cloneInstructions" }}
+    {{ $knot := .RepoInfo.Knot }}
+    {{ if eq $knot "knot1.tangled.sh" }}
+        {{ $knot = "tangled.sh" }}
+    {{ end }}
     <section
         class="mt-4 p-6 rounded bg-white dark:bg-gray-800 dark:text-white w-full mx-auto overflow-auto flex flex-col gap-4"
     >
@@ -7,7 +11,7 @@
             <div class="md:pl-4 overflow-x-auto whitespace-nowrap">
                 <code class="dark:text-gray-100"
                     >git remote add origin
-                    git@{{ .RepoInfo.Knot }}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code
+                    git@{{ $knot }}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code
                 >
             </div>
         </div>
@@ -36,7 +40,7 @@
                     <div class="overflow-x-auto whitespace-nowrap flex-1">
                         <code class="dark:text-gray-100"
                             >git clone
-                            git@{{ .RepoInfo.Knot }}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code
+                            git@{{ $knot }}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code
                         >
                     </div>
                 </div>
